<resources>
    <string name="app_name">My Timetable</string>
    <string name="projectName">Project Name</string>
    <string name="deliveryName">Delivery Name</string>
    <string name="projectActivity">Project Activity</string>
    <string name="status">Status</string>
    <string name="estimatedHours">Estimated Hours</string>
    <string name="date">Date</string>
    <string name="home">Home</string>
    <string name="createExcel">Create Excel</string>
    <string name="startdate">Start Date</string>
    <string name="enddate">End Date</string>
</resources>
